--- a/python/homework3.ipynb
+++ b/python/homework3.ipynb
@@ -46,14 +46,11 @@
    "source": [
     "### Trust-region method uses a quadratic model. At each iteration, the step is calculated by solving the following quadratic problem (sub-problem) using dogleg method:\n",
     "> Note: radius increases only if $|p_k|$ reaches the trust-region border\n",
-    "- ## $\\bar{p_k} = \\argmin_{\\| \\bar{p} \\| \\le \\Delta{_k}}[f(\\bar{x_k}) + \\bar{p}^T\\nabla{f(\\bar{x_k})} + \\frac{1}{2}\\bar{p}^TB_k\\bar{p}]$\n",
-    "    - ### When the first three terms of the quadratic model agrees with the Taylor expansion: S.T. $B_k = \\nabla^2f(\\bar{x_k})$, the algorithm is called the trust-region Newton Method\n",
-    "### The locally constrained trust region problem is to minimize model $m_k$ whhich is based on the Taylor expansion of the objective $f$ at the current point(where $T_k$ is the trust region and $\\bar{p_k}$ is now $\\bar{p}$ since $\\bar{m_k}$ is being iterated):\n",
-    "- ## $ \\bar{p_k} = \\min_{\\bar{p} \\in T_k} m_k(\\bar{p}) = \\min_{\\bar{p} \\in T_k} [f(\\bar{x_k}) + \\bar{p}^T\\nabla{f(\\bar{x_k})} + \\frac{1}{2}\\bar{p}^TB_k\\bar{p}]$\n",
-    "### The full step is the unconstrained minimum of the quadratic model: \n",
-    "- ## $\\bar{p_k}^{FS} = -B_k^{-1}\\nabla{f(\\bar{x_k})}$\n",
-    "### The step in the steepest descent direction is given by the unconstrained minimum of the quadratic model along the steepest descent direction:\n",
-    "- ## $\\bar{p_k}^{U} = - \\frac{\\nabla{f(\\bar{x_k})}^T\\nabla{f(\\bar{x_k})}}  {\\nabla{f(\\bar{x_k})}^T B_k \\nabla{f(\\bar{x_k})}} \\nabla{f(\\bar{x_k})}$"
+    "- $\\bar{p_k} = \\argmin_{\\| \\bar{p} \\| \\le \\Delta{_k}}[f(\\bar{x_k}) + \\bar{p}^T\\nabla{f(\\bar{x_k})} + \\frac{1}{2}\\bar{p}^TB_k\\bar{p}]$\n",
+    "    - When the first three terms of the quadratic model agrees with the Taylor expansion: S.T. $B_k = \\nabla^2f(\\bar{x_k})$, the algorithm is called the trust-region Newton Method. The locally constrained trust region problem is to minimize model $m_k$ whhich is based on the Taylor expansion of the objective $f$ at the current point(where $T_k$ is the trust region and $\\bar{p_k}$ is now $\\bar{p}$ since $\\bar{m_k}$ is being iterated):\n",
+    "- $ \\bar{p_k} = \\min_{\\bar{p} \\in T_k} m_k(\\bar{p}) = \\min_{\\bar{p} \\in T_k} [f(\\bar{x_k}) + \\bar{p}^T\\nabla{f(\\bar{x_k})} + \\frac{1}{2}\\bar{p}^TB_k\\bar{p}]$. The full step is the unconstrained minimum of the quadratic model: \n",
+    "- $\\bar{p_k}^{FS} = -B_k^{-1}\\nabla{f(\\bar{x_k})}$. The step in the steepest descent direction is given by the unconstrained minimum of the quadratic model along the steepest descent direction:\n",
+    "- $\\bar{p_k}^{U} = - \\frac{\\nabla{f(\\bar{x_k})}^T\\nabla{f(\\bar{x_k})}}  {\\nabla{f(\\bar{x_k})}^T B_k \\nabla{f(\\bar{x_k})}} \\nabla{f(\\bar{x_k})}$"
    ],
    "metadata": {}
   },
@@ -94,8 +91,8 @@
    "cell_type": "markdown",
    "source": [
     "### Dogleg Method:\n",
-    "- ## Quadratic equation $\\vert\\vert \\bar{p_k}^U + (\\tau^* - 1)(\\bar{p_k}^{FS}  - \\bar{p_k}^U) \\vert\\vert^2 = \\Delta_k^2$ where $\\tau^* \\in [1,2]$ and solve for $\\tau$ (only 1 positive root)\n",
-    "- ## Solving for the $\\tau^*$ using the quadratic formula gives $\\tau^* = \\frac{\\Delta_k \\ - \\ \\bar{p_k}^U}{\\bar{p_k}^{FS} \\ - \\ \\bar{p_k}^U} - 1$"
+    "- Quadratic equation $\\vert\\vert \\bar{p_k}^U + (\\tau^* - 1)(\\bar{p_k}^{FS}  - \\bar{p_k}^U) \\vert\\vert^2 = \\Delta_k^2$ where $\\tau^* \\in [1,2]$ and solve for $\\tau$ (only 1 positive root)\n",
+    "- Solving for the $\\tau^*$ using the quadratic formula gives $\\tau^* = \\frac{\\Delta_k \\ - \\ \\bar{p_k}^U}{\\bar{p_k}^{FS} \\ - \\ \\bar{p_k}^U} - 1$"
    ],
    "metadata": {}
   },
@@ -149,12 +146,12 @@
    "cell_type": "markdown",
    "source": [
     "### Trust Region: \n",
-    "- ### Set $k = 1, \\hat{\\Delta} > 0, \\Delta_0 \\in (0, \\hat{\\Delta}),$ and $\\eta \\in (0, \\frac{1}{4})$ S.T. $\\hat{\\Delta}$ = max trust region radius, and $\\Delta_0$ = initial trust region radius\n",
-    "- ### Given a step $\\bar{p_k}$ we define the ratio: $\\rho_k=\\frac{actual \\ reduction}{predicted \\ reduction} = \\frac{f(\\bar{x_k}) \\ - \\ f(\\bar{x_k} + \\bar{p_k})}{m_k(0) \\ - \\ m_k(\\bar{p_k})}$\n",
-    "- ### If $\\rho_k < 0$ We shrink the size of the trust region.\n",
-    "- ### If $\\rho_k ≈ 0$ Then we shrink the size of the trust region.\n",
-    "- ### If $\\rho_k ≈ 1$ Then the model is in good agreement with the objective; in this case it is (probably) safe to expand the trust region for the next iteration.\n",
-    "- ### Else we keep the size of the trust region."
+    "- Set $k = 1, \\hat{\\Delta} > 0, \\Delta_0 \\in (0, \\hat{\\Delta}),$ and $\\eta \\in (0, \\frac{1}{4})$ S.T. $\\hat{\\Delta}$ = max trust region radius, and $\\Delta_0$ = initial trust region radius\n",
+    "- Given a step $\\bar{p_k}$ we define the ratio: $\\rho_k=\\frac{actual \\ reduction}{predicted \\ reduction} = \\frac{f(\\bar{x_k}) \\ - \\ f(\\bar{x_k} + \\bar{p_k})}{m_k(0) \\ - \\ m_k(\\bar{p_k})}$\n",
+    "- If $\\rho_k < 0$ We shrink the size of the trust region.\n",
+    "- If $\\rho_k ≈ 0$ Then we shrink the size of the trust region.\n",
+    "- If $\\rho_k ≈ 1$ Then the model is in good agreement with the objective; in this case it is (probably) safe to expand the trust region for the next iteration.\n",
+    "- Else we keep the size of the trust region."
    ],
    "metadata": {}
   },
@@ -1426,6 +1423,14 @@
       "\n"
      ]
     }
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "### Resource:\n",
+    "- [Example](https://sudonull.com/post/68061-Optimization-method-Trust-Region-DOGLEG-Python-implementation-example)"
    ],
    "metadata": {}
   }
